--- a/hw1/index.html
+++ b/hw1/index.html
@@ -36,7 +36,7 @@
 		
 		<br>
 
-		Link to GitHub repository: <a href="https://github.com/cal-cs184-student/sp25-hw1-3-1">https://github.com/cal-cs184-student/sp25-hw1-3-1</a>
+		Link to GitHub repository: <a href="https://github.com/cal-cs184-student/sp25-hw1-3-1">github.com/cal-cs184-student/sp25-hw1-3-1</a>
 
 		<div style="display: flex; flex-direction: column; align-items: center;">
 			<table style="width: 70%; text-align: center; border-collapse: collapse;">
