--- a/hw3/index.html
+++ b/hw3/index.html
@@ -35,11 +35,32 @@
 		Link to webpage: <a href="https://cal-cs184-student.github.io/hw-webpages-3-webpage/">cal-cs184-student.github.io/hw-webpages-3-webpage/</a>
 		<br>
 		Link to GitHub repository: <a href="https://github.com/cal-cs184-student/sp25-hw3-3-v3">github.com/cal-cs184-student/sp25-hw3-3-v3</a>
+		<br><br>
 		
-		<!-- <figure> -->
-			<!-- <img src="cornell.png" alt="Cornell Boxes with Bunnies" style="width:70%"/> -->
-			<!-- <figcaption>You can add images with captions!</figcaption> -->
-		<!-- </figure> -->
+		<div style="display: flex; flex-direction: column; align-items: center;">
+			<table style="width: 100%; text-align: center; border-collapse: collapse;">
+			  <tr>
+				<td style="text-align: center;">
+					<img src="Images\4b_accumT\CBbunny_0bounce_acc.png" width="200px"/>
+				</td>
+				<td style="text-align: center;">
+				  <img src="Images\4b_accumT\CBbunny_1bounce_acc.png" width="200px"/>
+				</td>
+				<td style="text-align: center;">
+					<img src="Images\4b_accumT\CBbunny_2bounce_acc.png" width="200px"/>
+				</td>
+				<td style="text-align: center;">
+				  <img src="Images\4b_accumT\CBbunny_3bounce_acc.png" width="200px"/>
+				</td>
+				<td style="text-align: center;">
+					<img src="Images\4b_accumT\CBbunny_4bounce_acc.png" width="200px"/>
+				</td>
+				<td style="text-align: center;">
+					<img src="Images\4b_accumT\CBbunny_5bounce_acc.png" width="200px"/>
+				</td>
+			  </tr>
+			</table>
+		</div>
 
 		<!--
 		We've already added one heading per part, to make your write-up as navigable when grading. Please fit your write-up within these sections!
