--- a/hw4/index.html
+++ b/hw4/index.html
@@ -37,11 +37,24 @@
 		<br>
 
 		Link to GitHub repository: <a href="https://github.com/cal-cs184-student/sp25-hw4-3-v4">github.com/cal-cs184-student/sp25-hw4-3-v4</a>
+		
+		<br><br>
 
-		<!-- <figure>
-			<img src="clothsim.png" alt="Cloth draped over sphere" style="width:70%"/>
-			<figcaption>You can add images with captions!</figcaption>
-		</figure> -->
+		<div style="display: flex; flex-direction: column; align-items: center;">
+			<table style="width: 100%; text-align: center; border-collapse: collapse;">
+			  <tr>
+				<td style="text-align: center;">
+				  <img src="Images\3_500.png" width="200px"/>
+				</td>
+				<td style="text-align: center;">
+				  <img src="Images\3_5000.png" width="200px"/>
+				</td>
+				<td style="text-align: center;">
+				  <img src="Images\3_50000.png" width="200px"/>
+				</td>
+			  </tr>
+			</table>
+		</div>
 
 		<!--
 		We've already added one heading per part, to make your write-up as navigable when grading. Please fit your write-up within these sections!
